--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>The HTML5 Herald</title>
+  <link rel="stylesheet" href="dist/styles.css">
 </head>
 
 <body>
 	<img src="./images/red-gulp.svg"/>
  	<h1>Automate Development With Gulp</h1>
 	<p>Check it out at <a href="http://gulpjs.com">gulpjs.com</a></p>
-  <script src="/dist/main.js" charset="utf-8"></script>
-  <!-- <script src="http://localhost:35729/livereload.js" charset="utf-8"></script> -->
+  <script src="dist/main.js" charset="utf-8"></script>
+  <script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
 </body>
 </html>
