--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 	<img src="./images/red-gulp.svg"/>
  	<h1>Automate Development With Gulp</h1>
 	<p>Check it out at <a href="http://gulpjs.com">gulpjs.com</a></p>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.js" charset="utf-8"></script>
+  <script src="dist/templates.js" charset="utf-8"></script>
   <script src="dist/scripts.js" charset="utf-8"></script>
   <script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
 </body>
